Add auth0 to frontend
